--- a/widgets/AreaSelect2/web/css/widget.css
+++ b/widgets/AreaSelect2/web/css/widget.css
@@ -5,6 +5,7 @@
 
 .select2-container--default .select2-selection--single .select2-selection__rendered {
     line-height: 43px !important;
+    padding-left: 18px !important;
 }
 
 .select2-container--default .select2-selection--single .select2-selection__arrow {
